# django-collectd-rest

./: .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  rrd.c  runtests.py  setup.py
.github/workflows/: django.yml  python-publish.yml
c_src/: rrd.c
collectd_rest/: models.py  renderers.py  rrd.py  serializers.py  urls.py  views.py
collectd_rest/migrations/: 0001_initial.py  0003_graphgranularity.py  0004_protect_graph_on_granularity.py
src/collectd_rest/: models.py  renderers.py  serializers.py  urls.py  views.py
src/collectd_rest/migrations/: 0002_slug_name.py  0003_graphgranularity.py
tests/: __init__.py  granularity.py  graph.py  group.py  rrd.py  settings.py  test_all.py  test_graph.py  test_settings.py  urls.py
